--- a/config.json.example
+++ b/config.json.example
@@ -1,9 +1,9 @@
 {
-  "TOKEN": "",
-  "YOUTUBE_API_KEY": "",
-  "SOUNDCLOUD_CLIENT_ID": "",
+  "TOKEN": "OTI2MjIzOTk4NDc4NTg5OTYy.Yc4jUQ.fPZoOegAgsEYXI85_IAkkFx_5ic",
+  "YOUTUBE_API_KEY": "AIzaSyDExCZ2UhM3i5WGs5hNYQmIiwswkxbD",
+  "SOUNDCLOUD_CLIENT_ID": "787384416892223520",
   "MAX_PLAYLIST_SIZE": 10,
-  "PREFIX": "/",
+  "PREFIX": "+",
   "PRUNING": false,
   "LOCALE": "en",
   "STAY_TIME": 30,
